src/objects/Post__c.object
<CustomObject>
    <fields>
        <fullName>Author_Writer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author/Writer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <label>Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Post title</description>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Post</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Post_info</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Author_Writer__c</columns>
        <columns>Published__c</columns>
        <columns>Status__c</columns>
        <columns>Tags__c</columns>
        <filterScope>Everything</filterScope>
        <label>Post info</label>
    </listViews>
    <nameField>
        <label>Post Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Owners_manager_can_chante_to_ready</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    (ISCHANGED(Status__c)),
   ($User.Id &lt;&gt; Owner:User.ManagerId ),
   ISPICKVAL(Status__c ,&quot;Ready&quot;)
)</errorConditionFormula>
        <errorMessage>Only the owner’s manager can change the status to Ready.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Post_created_with_draft_status</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISPICKVAL(Status__c ,&quot;Draft&quot;)),
    ISNEW())</errorConditionFormula>
        <errorMessage>Post can only be created with Draft status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
   (ISCHANGED(Status__c)),
   (NOT(ISPICKVAL(Status__c ,&quot;Under Review&quot;))),
   (NOT(ISPICKVAL(Status__c ,&quot;Ready&quot;)))
       
)</errorConditionFormula>
        <errorMessage>Wrong status</errorMessage>
    </validationRules>
</CustomObject>